# Smart_Trading_System

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_agent.py
.github/workflows/: ci.yml
src/stock_agent/: agent.py  cli.py  config.py  data_sources.py  models.py  provider_utils.py  scoring.py
src/stock_agent/core/: __init__.py  exceptions.py  exit_codes.py  logging.py  retry.py  run_lock.py
src/stock_agent/domain/: __init__.py  run_report.py
src/stock_agent/persistence/: __init__.py  database.py  run_repository.py
src/stock_agent/providers/: __init__.py  base.py  excel_report_provider.py  factory.py  fallback_provider.py  google_news_provider.py  mock_provider.py  sqlite_run_repository.py  yfinance_provider.py
src/stock_agent/services/: __init__.py  analysis_service.py  healthcheck_service.py  run_orchestrator.py  run_report_service.py  summary_printer.py  ticker_analysis_service.py
tests/: conftest.py  fakes.py  test_analysis_service.py  test_cli.py  test_cli_scheduler.py  test_config.py  test_excel_report_provider.py  test_fallback_provider.py  test_logging.py  test_persistence.py  test_retry.py  test_run_lock.py  test_run_orchestrator_integration.py  test_run_report_service.py  test_scoring.py
tests/fixtures/: universe.csv
watchlists/: core_watchlist.txt
