[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-stock-prediction"
version = "0.1.0"
description = "Production-style stock analysis and Excel reporting automation tool"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Shiva Krishna" }
]
dependencies = [
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "psycopg[binary]>=3.2,<4.0",
    "yfinance>=0.2,<1.0",
    "requests>=2.32,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "build>=1.2,<2.0",
    "twine>=5.0,<6.0"
]

[project.scripts]
stock-agent = "stock_agent.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stock_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
